--- a/public/css/template_bootstrap.css
+++ b/public/css/template_bootstrap.css
@@ -2,11 +2,211 @@
 
 .sidebar .nav-item .collapse .collapse-inner .collapse-item.active,
 .sidebar .nav-item .collapsing .collapse-inner .collapse-item.active {
-  color: #5b7d5a !important;
+  color: var(--primary) !important;
 }
 
 html {
-  background: #f8f9fc;
+  background: var(--light);
+}
+
+.preload {
+  overflow: hidden;
+}
+
+.preload * {
+  -webkit-animation: none !important;
+  animation: none !important;
+}
+
+#preloader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: var(--light);
+  z-index: 9999;
+}
+
+#preloader__status {
+  position: absolute;
+  left: 50%;
+  top: 45%;
+}
+
+/* Preloader Square */
+
+.preloader__group {
+  position: relative;
+  left: -50%;
+  display: inline-block;
+  line-height: 16px;
+  text-align: center;
+}
+
+.preloader__big-square {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  overflow: hidden;
+  transform-origin: bottom left;
+  -webkit-animation: big-square_shrink 1s linear infinite !important;
+  animation: big-square_shrink 1s linear infinite !important;
+}
+
+.preloader__square {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background: var(--primary);
+}
+
+.preloader__square.first {
+  left: 0px;
+  top: 20px;
+}
+
+.preloader__square.second {
+  left: 20px;
+  top: 20px;
+  -webkit-animation: drop2 1s linear infinite !important;
+  animation: drop2 1s linear infinite !important;
+}
+
+.preloader__square.third {
+  left: 0px;
+  top: 0px;
+  -webkit-animation: drop3 1s linear infinite !important;
+  animation: drop3 1s linear infinite !important;
+}
+
+.preloader__square.fourth {
+  left: 20px;
+  top: 0px;
+  -webkit-animation: drop4 1s linear infinite !important;
+  animation: drop4 1s linear infinite !important;
+}
+
+.preloader__text {
+  font-family: "Quicksand", sans-serif;
+  color: #222;
+  display: block;
+  margin: 10px 0;
+}
+
+/* Animation */
+
+@-webkit-keyframes big-square_shrink {
+  0% {
+    transform: scale(1);
+  }
+
+  90% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0.5);
+  }
+}
+
+@keyframes big-square_shrink {
+  0% {
+    transform: scale(1);
+  }
+
+  90% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(0.5);
+  }
+}
+
+@-webkit-keyframes drop2 {
+  0% {
+    transform: translateY(-50px);
+  }
+
+  25% {
+    transform: translate(0);
+  }
+
+  100% {
+    transform: translate(0);
+  }
+}
+
+@keyframes drop2 {
+  0% {
+    transform: translateY(-50px);
+  }
+
+  25% {
+    transform: translate(0);
+  }
+
+  100% {
+    transform: translate(0);
+  }
+}
+
+@-webkit-keyframes drop3 {
+  0% {
+    transform: translateY(-50px);
+  }
+
+  50% {
+    transform: translate(0);
+  }
+
+  100% {
+    transform: translate(0);
+  }
+}
+
+@keyframes drop3 {
+  0% {
+    transform: translateY(-50px);
+  }
+
+  50% {
+    transform: translate(0);
+  }
+
+  100% {
+    transform: translate(0);
+  }
+}
+
+@-webkit-keyframes drop4 {
+  0% {
+    transform: translateY(-50px);
+  }
+
+  75% {
+    transform: translate(0);
+  }
+
+  100% {
+    transform: translate(0);
+  }
+}
+
+@keyframes drop4 {
+  0% {
+    transform: translateY(-50px);
+  }
+
+  75% {
+    transform: translate(0);
+  }
+
+  100% {
+    transform: translate(0);
+  }
 }
 
 /*!
@@ -18205,173 +18405,173 @@ form.user .btn-user {
 
 @-webkit-keyframes noise-anim {
   0% {
-    clip: rect(31px, 9999px, 87px, 0);
+    clip: rect(77px, 9999px, 96px, 0);
   }
 
   5% {
-    clip: rect(88px, 9999px, 34px, 0);
+    clip: rect(53px, 9999px, 99px, 0);
   }
 
   10% {
-    clip: rect(87px, 9999px, 45px, 0);
+    clip: rect(39px, 9999px, 96px, 0);
   }
 
   15% {
-    clip: rect(24px, 9999px, 64px, 0);
+    clip: rect(59px, 9999px, 57px, 0);
   }
 
   20% {
-    clip: rect(48px, 9999px, 65px, 0);
+    clip: rect(14px, 9999px, 52px, 0);
   }
 
   25% {
-    clip: rect(89px, 9999px, 63px, 0);
+    clip: rect(36px, 9999px, 82px, 0);
   }
 
   30% {
-    clip: rect(74px, 9999px, 10px, 0);
+    clip: rect(64px, 9999px, 38px, 0);
   }
 
   35% {
-    clip: rect(95px, 9999px, 10px, 0);
+    clip: rect(95px, 9999px, 41px, 0);
   }
 
   40% {
-    clip: rect(48px, 9999px, 29px, 0);
+    clip: rect(71px, 9999px, 54px, 0);
   }
 
   45% {
-    clip: rect(33px, 9999px, 60px, 0);
+    clip: rect(96px, 9999px, 72px, 0);
   }
 
   50% {
-    clip: rect(55px, 9999px, 21px, 0);
+    clip: rect(94px, 9999px, 65px, 0);
   }
 
   55% {
-    clip: rect(40px, 9999px, 61px, 0);
+    clip: rect(27px, 9999px, 86px, 0);
   }
 
   60% {
-    clip: rect(88px, 9999px, 26px, 0);
+    clip: rect(31px, 9999px, 43px, 0);
   }
 
   65% {
-    clip: rect(21px, 9999px, 28px, 0);
+    clip: rect(26px, 9999px, 61px, 0);
   }
 
   70% {
-    clip: rect(28px, 9999px, 96px, 0);
+    clip: rect(3px, 9999px, 31px, 0);
   }
 
   75% {
-    clip: rect(82px, 9999px, 31px, 0);
+    clip: rect(31px, 9999px, 70px, 0);
   }
 
   80% {
-    clip: rect(52px, 9999px, 52px, 0);
+    clip: rect(54px, 9999px, 79px, 0);
   }
 
   85% {
-    clip: rect(15px, 9999px, 26px, 0);
+    clip: rect(11px, 9999px, 31px, 0);
   }
 
   90% {
-    clip: rect(43px, 9999px, 38px, 0);
+    clip: rect(22px, 9999px, 24px, 0);
   }
 
   95% {
-    clip: rect(83px, 9999px, 35px, 0);
+    clip: rect(39px, 9999px, 42px, 0);
   }
 
   100% {
-    clip: rect(9px, 9999px, 2px, 0);
+    clip: rect(49px, 9999px, 97px, 0);
   }
 }
 
 @keyframes noise-anim {
   0% {
-    clip: rect(31px, 9999px, 87px, 0);
+    clip: rect(77px, 9999px, 96px, 0);
   }
 
   5% {
-    clip: rect(88px, 9999px, 34px, 0);
+    clip: rect(53px, 9999px, 99px, 0);
   }
 
   10% {
-    clip: rect(87px, 9999px, 45px, 0);
+    clip: rect(39px, 9999px, 96px, 0);
   }
 
   15% {
-    clip: rect(24px, 9999px, 64px, 0);
+    clip: rect(59px, 9999px, 57px, 0);
   }
 
   20% {
-    clip: rect(48px, 9999px, 65px, 0);
+    clip: rect(14px, 9999px, 52px, 0);
   }
 
   25% {
-    clip: rect(89px, 9999px, 63px, 0);
+    clip: rect(36px, 9999px, 82px, 0);
   }
 
   30% {
-    clip: rect(74px, 9999px, 10px, 0);
+    clip: rect(64px, 9999px, 38px, 0);
   }
 
   35% {
-    clip: rect(95px, 9999px, 10px, 0);
+    clip: rect(95px, 9999px, 41px, 0);
   }
 
   40% {
-    clip: rect(48px, 9999px, 29px, 0);
+    clip: rect(71px, 9999px, 54px, 0);
   }
 
   45% {
-    clip: rect(33px, 9999px, 60px, 0);
+    clip: rect(96px, 9999px, 72px, 0);
   }
 
   50% {
-    clip: rect(55px, 9999px, 21px, 0);
+    clip: rect(94px, 9999px, 65px, 0);
   }
 
   55% {
-    clip: rect(40px, 9999px, 61px, 0);
+    clip: rect(27px, 9999px, 86px, 0);
   }
 
   60% {
-    clip: rect(88px, 9999px, 26px, 0);
+    clip: rect(31px, 9999px, 43px, 0);
   }
 
   65% {
-    clip: rect(21px, 9999px, 28px, 0);
+    clip: rect(26px, 9999px, 61px, 0);
   }
 
   70% {
-    clip: rect(28px, 9999px, 96px, 0);
+    clip: rect(3px, 9999px, 31px, 0);
   }
 
   75% {
-    clip: rect(82px, 9999px, 31px, 0);
+    clip: rect(31px, 9999px, 70px, 0);
   }
 
   80% {
-    clip: rect(52px, 9999px, 52px, 0);
+    clip: rect(54px, 9999px, 79px, 0);
   }
 
   85% {
-    clip: rect(15px, 9999px, 26px, 0);
+    clip: rect(11px, 9999px, 31px, 0);
   }
 
   90% {
-    clip: rect(43px, 9999px, 38px, 0);
+    clip: rect(22px, 9999px, 24px, 0);
   }
 
   95% {
-    clip: rect(83px, 9999px, 35px, 0);
+    clip: rect(39px, 9999px, 42px, 0);
   }
 
   100% {
-    clip: rect(9px, 9999px, 2px, 0);
+    clip: rect(49px, 9999px, 97px, 0);
   }
 }
 
@@ -18390,173 +18590,173 @@ form.user .btn-user {
 
 @-webkit-keyframes noise-anim-2 {
   0% {
-    clip: rect(13px, 9999px, 36px, 0);
+    clip: rect(37px, 9999px, 22px, 0);
   }
 
   5% {
-    clip: rect(62px, 9999px, 26px, 0);
+    clip: rect(39px, 9999px, 63px, 0);
   }
 
   10% {
-    clip: rect(6px, 9999px, 4px, 0);
+    clip: rect(23px, 9999px, 21px, 0);
   }
 
   15% {
-    clip: rect(91px, 9999px, 27px, 0);
+    clip: rect(88px, 9999px, 15px, 0);
   }
 
   20% {
-    clip: rect(45px, 9999px, 16px, 0);
+    clip: rect(26px, 9999px, 30px, 0);
   }
 
   25% {
-    clip: rect(100px, 9999px, 67px, 0);
+    clip: rect(28px, 9999px, 65px, 0);
   }
 
   30% {
-    clip: rect(48px, 9999px, 26px, 0);
+    clip: rect(25px, 9999px, 39px, 0);
   }
 
   35% {
-    clip: rect(45px, 9999px, 39px, 0);
+    clip: rect(2px, 9999px, 93px, 0);
   }
 
   40% {
-    clip: rect(94px, 9999px, 72px, 0);
+    clip: rect(14px, 9999px, 94px, 0);
   }
 
   45% {
-    clip: rect(2px, 9999px, 100px, 0);
+    clip: rect(58px, 9999px, 25px, 0);
   }
 
   50% {
-    clip: rect(27px, 9999px, 78px, 0);
+    clip: rect(95px, 9999px, 10px, 0);
   }
 
   55% {
-    clip: rect(40px, 9999px, 27px, 0);
+    clip: rect(9px, 9999px, 58px, 0);
   }
 
   60% {
-    clip: rect(3px, 9999px, 62px, 0);
+    clip: rect(48px, 9999px, 13px, 0);
   }
 
   65% {
-    clip: rect(88px, 9999px, 3px, 0);
+    clip: rect(84px, 9999px, 3px, 0);
   }
 
   70% {
-    clip: rect(83px, 9999px, 61px, 0);
+    clip: rect(13px, 9999px, 54px, 0);
   }
 
   75% {
-    clip: rect(48px, 9999px, 7px, 0);
+    clip: rect(3px, 9999px, 57px, 0);
   }
 
   80% {
-    clip: rect(71px, 9999px, 48px, 0);
+    clip: rect(27px, 9999px, 8px, 0);
   }
 
   85% {
-    clip: rect(43px, 9999px, 80px, 0);
+    clip: rect(30px, 9999px, 31px, 0);
   }
 
   90% {
-    clip: rect(4px, 9999px, 12px, 0);
+    clip: rect(93px, 9999px, 89px, 0);
   }
 
   95% {
-    clip: rect(44px, 9999px, 65px, 0);
+    clip: rect(28px, 9999px, 5px, 0);
   }
 
   100% {
-    clip: rect(12px, 9999px, 35px, 0);
+    clip: rect(77px, 9999px, 35px, 0);
   }
 }
 
 @keyframes noise-anim-2 {
   0% {
-    clip: rect(13px, 9999px, 36px, 0);
+    clip: rect(37px, 9999px, 22px, 0);
   }
 
   5% {
-    clip: rect(62px, 9999px, 26px, 0);
+    clip: rect(39px, 9999px, 63px, 0);
   }
 
   10% {
-    clip: rect(6px, 9999px, 4px, 0);
+    clip: rect(23px, 9999px, 21px, 0);
   }
 
   15% {
-    clip: rect(91px, 9999px, 27px, 0);
+    clip: rect(88px, 9999px, 15px, 0);
   }
 
   20% {
-    clip: rect(45px, 9999px, 16px, 0);
+    clip: rect(26px, 9999px, 30px, 0);
   }
 
   25% {
-    clip: rect(100px, 9999px, 67px, 0);
+    clip: rect(28px, 9999px, 65px, 0);
   }
 
   30% {
-    clip: rect(48px, 9999px, 26px, 0);
+    clip: rect(25px, 9999px, 39px, 0);
   }
 
   35% {
-    clip: rect(45px, 9999px, 39px, 0);
+    clip: rect(2px, 9999px, 93px, 0);
   }
 
   40% {
-    clip: rect(94px, 9999px, 72px, 0);
+    clip: rect(14px, 9999px, 94px, 0);
   }
 
   45% {
-    clip: rect(2px, 9999px, 100px, 0);
+    clip: rect(58px, 9999px, 25px, 0);
   }
 
   50% {
-    clip: rect(27px, 9999px, 78px, 0);
+    clip: rect(95px, 9999px, 10px, 0);
   }
 
   55% {
-    clip: rect(40px, 9999px, 27px, 0);
+    clip: rect(9px, 9999px, 58px, 0);
   }
 
   60% {
-    clip: rect(3px, 9999px, 62px, 0);
+    clip: rect(48px, 9999px, 13px, 0);
   }
 
   65% {
-    clip: rect(88px, 9999px, 3px, 0);
+    clip: rect(84px, 9999px, 3px, 0);
   }
 
   70% {
-    clip: rect(83px, 9999px, 61px, 0);
+    clip: rect(13px, 9999px, 54px, 0);
   }
 
   75% {
-    clip: rect(48px, 9999px, 7px, 0);
+    clip: rect(3px, 9999px, 57px, 0);
   }
 
   80% {
-    clip: rect(71px, 9999px, 48px, 0);
+    clip: rect(27px, 9999px, 8px, 0);
   }
 
   85% {
-    clip: rect(43px, 9999px, 80px, 0);
+    clip: rect(30px, 9999px, 31px, 0);
   }
 
   90% {
-    clip: rect(4px, 9999px, 12px, 0);
+    clip: rect(93px, 9999px, 89px, 0);
   }
 
   95% {
-    clip: rect(44px, 9999px, 65px, 0);
+    clip: rect(28px, 9999px, 5px, 0);
   }
 
   100% {
-    clip: rect(12px, 9999px, 35px, 0);
+    clip: rect(77px, 9999px, 35px, 0);
   }
 }
 
